--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
